feat: add MSSQL uniqueidentifier test and update compression test suite

--- a/cmd/sling/tests/replications/r.38.snowflake_compression_test.yaml
+++ b/cmd/sling/tests/replications/r.38.snowflake_compression_test.yaml
@@ -3,8 +3,6 @@ target: SNOWFLAKE
 
 defaults:
   mode: full-refresh
-  target_options:
-    compression: gzip
 
 hooks:
   start:
@@ -40,3 +38,8 @@ env:
 streams:
   mysql.compression_test:
     object: 'public.compression_test'
+  mysql.compression_test2:
+    sql: select * from mysql.compression_test
+    object: 'public.compression_test'
+    target_options:
+      compression: gzip
