--- a/cmd/sling/tests/replications/r.15.yaml
+++ b/cmd/sling/tests/replications/r.15.yaml
@@ -6,13 +6,13 @@ defaults:
 
 streams:
   
-  sling_test/*iceberg:
-    source_options:
-      format: iceberg
-      limit: 100
-    object: public.sling_test_{stream_file_name}
-    update_key: l_commitdate
-    mode: '{iceberg_mode}' # if blank, defaults to full-refresh
+  # sling_test/*iceberg:
+  #   source_options:
+  #     format: iceberg
+  #     limit: 100
+  #   object: public.sling_test_{stream_file_name}
+  #   update_key: l_commitdate
+  #   mode: '{iceberg_mode}' # if blank, defaults to full-refresh
 
   # Duckdb has issues with delta via s3
   sling_test/delta:
@@ -29,11 +29,11 @@ streams:
       format: delta
     object: public.sling_test_delta_sql
 
-  iceberg_sql:
-    sql: select l_commitdate from iceberg_scan('s3://{source_bucket}/sling_test/lineitem_iceberg', allow_moved_paths = true)
-    source_options:
-      format: iceberg
-    object: public.sling_test_iceberg_sql
+  # iceberg_sql:
+  #   sql: select l_commitdate from iceberg_scan('s3://{source_bucket}/sling_test/lineitem_iceberg', allow_moved_paths = true)
+  #   source_options:
+  #     format: iceberg
+  #   object: public.sling_test_iceberg_sql
 
   test/parquet/test1.parquet:
     sql: select id, first_name from {stream_scanner} where id != '100'
