--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -272,20 +272,10 @@
 - id: 46
   name: Run sling with replication configuration 15
   run: 'sling run -r cmd/sling/tests/replications/r.15.yaml # iceberg & delta'
-  streams: 5
+  streams: 3
   output_contains:
-    - 100 rows
-    - '[1 / 3] running stream sling_test/lineitem_iceberg'
-
-- id: 47
-  name: Run sling with replication configuration 15 incremental
-  run: sling run -r cmd/sling/tests/replications/r.15.yaml --streams sling_test/lineitem_iceberg/
-  env:
-    ICEBERG_MODE: incremental
-  rows: '>0'
-  streams: 1
-  output_contains:
-    - incremental
+    - 999 rows
+    - 'aws_s3 -> postgres | test/parquet/test1.parquet'
 
 - id: 48
   name: Run sling with replication configuration 14
