--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -6,17 +6,17 @@ on:
       version:
         description: 'version override'
         required: false
-  pull_request:
-    types:
-      - closed
-    branches:
-      - main
-    paths-ignore:
-      - '.github/**'
-      - 'core/dbio/api/specs/**'
-      - 'api/**'
-      - 'core/dbio/api/llms.md'
-      - 'README.md'
+  # pull_request:
+  #   types:
+  #     - closed
+  #   branches:
+  #     - main
+  #   paths-ignore:
+  #     - '.github/**'
+  #     - 'core/dbio/api/specs/**'
+  #     - 'api/**'
+  #     - 'core/dbio/api/llms.md'
+  #     - 'README.md'
 
 jobs:
   bump:
