feat: add remove_diacritics transformation and adjust casting in final cleanup stage

--- a/cmd/sling/tests/replications/r.44.staged_transforms_test.yaml
+++ b/cmd/sling/tests/replications/r.44.staged_transforms_test.yaml
@@ -84,7 +84,8 @@ streams:
         processed_status: 'upper(record.status) + "_PROCESSED"'
       
       # Stage 5: Final cleanup - cast numeric fields
-      - "*": 'cast(value, "string")'
+      - "*": cast(value, "string")
+      - "*": remove_diacritics(value)
       - calculated_amount: 'cast(value, "decimal")'
         
     hooks:
