feat: add test case for Sling Platform and create replication configuration

--- a/api/specs/sling_platform.yaml
+++ b/api/specs/sling_platform.yaml
@@ -24,7 +24,7 @@ endpoints:
       processors:
         - expression: int_parse(date_format(now(), "%Y"))
           output: record.loaded_year
-        - expression: log(record)
+        # - expression: log(record)
       
   executions:
       
